Katzion/force-app/main/default/objects/Contact/fields/Citizen_Id__c.field-meta.xml
<CustomField>
    <fullName>Citizen_Id__c</fullName>
    <externalId>true</externalId>
    <label>Citizen Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>