Katzion/force-app/main/default/objects/Contact/fields/Drivers_Licence_Number__c.field-meta.xml
<CustomField>
    <fullName>Drivers_Licence_Number__c</fullName>
    <label>Driver&apos;s Licence Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>