Katzion/force-app/main/default/objects/Contact/fields/In_Active__c.field-meta.xml
<CustomField>
    <fullName>In_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In_Active</label>
    <type>Checkbox</type>
</CustomField>